<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:id="@+id/subject_layout"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:hintTextAppearance="@style/HintText"
        app:errorTextAppearance="@style/ErrorText">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject"
            android:hint="@string/subject"
            android:id="@+id/sub"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <EditText
        android:id="@+id/des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="25dp"
        android:minHeight="300dp"
        android:gravity="start|end"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:lines="13"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:scrollHorizontally="false"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/textinputborder"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/post"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:text="@string/post"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#ffffff"
        android:minWidth="115dp"
        />

</LinearLayout>